--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: sans-serif;
+  margin:0;
 }
 
 #main {
@@ -9,6 +10,8 @@ position:relative;
 #mainCanvas {
 }
 
+#commands {background-color:#eee;width:100%;float:left;height:50px;}
+#command {float:left;width:200px;min-height:450px;border: solid 1px #000}
 .window {
   position:absolute;
   border: 1px solid #000;
@@ -16,7 +19,7 @@ position:relative;
 
 .title{
 font-size: 20pt;
-margin: 15px 0;
+margin: 15px;
 }
 
 .commandButton {
